pkp/pkp-lib#6328 Added missing locale keys

--- a/locale/en_US/author.po
+++ b/locale/en_US/author.po
@@ -13,3 +13,6 @@ msgstr ""
 
 msgid "author.submit.notAccepting"
 msgstr "This press is not accepting submissions at this time."
+
+msgid "author.submit"
+msgstr "New Submission"
