--- a/locale/en_US/submission.po
+++ b/locale/en_US/submission.po
@@ -473,6 +473,9 @@ msgstr "Chapter Page"
 msgid "publication.chapter.hasLandingPage"
 msgstr "Show this chapter on its own page and link to that page from the book's table of contents."
 
+msgid "publication.publish.success"
+msgstr "Publication status successfully changed."
+
 msgid "chapter.volume"
 msgstr "Volume"
 
