--- a/docs/README
+++ b/docs/README
@@ -1,9 +1,9 @@
 	==================================
 	=== Open Monograph Press
 	=== The Public Knowledge Project
-	=== Version: 3.3.0
-	=== GIT tag: 3_3_0-2
-	=== Release date: February 1, 2021
+	=== Version: 3.4.0
+	=== GIT tag: 3_4_0-0
+	=== Release date: 
 	==================================
 
 
@@ -28,7 +28,7 @@ System Requirements
 -------------------
 Recommended server requirements:
 
-	* PHP >= 7.3
+	* PHP >= 8.0
 	* MySQL >= 4.1.1 or PostgreSQL >= 9.5
 	* Apache >= 1.3.2x or >= 2.0.4x or Microsoft IIS 6
 	* Operating system: Any OS that supports the above software, including
