--- a/locale/en_US/admin.po
+++ b/locale/en_US/admin.po
@@ -120,3 +120,6 @@ msgstr "The bulk email feature has been disabled for this press. Enable this fea
 
 msgid "admin.siteManagement.description"
 msgstr "Add, edit or remove presses from this site and manage site-wide settings."
+
+msgid "admin.scheduledTask.usageStatsLoader.invalidLogEntry.chapterId"
+msgstr "Chapter ID is not an integer"
